Formatting, rip out Stream and Optional.